Added file picker

--- a/basediproject/src/main/res/values/strings.xml
+++ b/basediproject/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BaseDIProject</string>
+    <string name="file_picker">Choose your file</string>
+
 </resources>
